--- a/doc/paper17/introduction.tex
+++ b/doc/paper17/introduction.tex
@@ -114,7 +114,7 @@ parallel distributed hash table (PDHT) that is implemented directly
 using the Portals programming interface. This work is based on the
 following insights: (1) implementing data structures using Portals
 leads to an opportunity to leverage efficient, hardware accelerated
-implementations of Portals and (2) that operations on a hash-table
+implementations of Portals and (2) that operations on a hash table
 can be readily mapped to operations within
 Portals that would be difficult to express exclusively within an
 MPI-like system or a PGAS system.
